10

* es, fr translation
* rotated cards to enable larger/longer text strings
* cleaned up match logic for word games

9

* auto-deal of extra cards when needed
* added glue for launching outside of Sugar
* save "low score" to Journal
* added numbers and words games
* autogenerate cards on the fly
* minutes:seconds display for total time
* general code cleanup

8

* fixed bug in new game labels
* added unselect

7

* more distinct colors on cards
* count seconds between matches
* detect game over
* automatically deals extra cards when necessary

6

* fixed card selection bug

5

* added search function

4

* add 3 cards when you get stuck

3

* Eliminate naming alert from pre-0.86 toolbar
* New pot file

2

* New icon
* Fixed problem with the New Game button

1

* Version 1 of a visual matching game. The object is to find sets of
  three cards where each attribute—color, shape, number of elements,
  and shading—either match on all three cards or are different on all
  three cards. Version 1 doesn't yet support sharing with multiple
  players or saving to the Journal, but it can be played by a single
  player.